--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>Vask3n</title>
+    <link href="/css/style.css" rel="stylesheet"/>
+  </head>
+  <body>
+    <div class="container">
+      <div></div>
+    </div>
+  </body>
 </html>
