added angular library

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
   <head>
+    <script src="scripts/lib/angular.js"></script>
     <title>Vask3n</title>
     <link href="/css/style.css" rel="stylesheet"/>
   </head>
@@ -8,5 +9,7 @@
     <div class="container">
       <div></div>
     </div>
+
+    <script src="scripts/script.js"></script>
   </body>
 </html>
